--- a/static/scss/index.scss
+++ b/static/scss/index.scss
@@ -2,7 +2,7 @@
 @import "global";
 
 .header {
-	background-image: url("/static/img/express/小小直通车，拉近心与心的距离.JPG");
+	background-image: url("/static/img/express/xinyuxin.jpg");
 	@include background-size(cover);
 	height: 400px;
 }
