Index style improvement

--- a/static/scss/_global.scss
+++ b/static/scss/_global.scss
@@ -4,6 +4,18 @@
 //   }
 // }
 
+nav {
+	.nav-wrapper {
+		margin-left: 20px;
+		margin-right: 20px;
+	}
+	.brand-logo {
+		font-size: 1.5em;
+		span {
+			font-size: 0.5em;
+		}
+	}
+}
 
 .pagination {
 	a {
