--- a/static/scss/_global.scss
+++ b/static/scss/_global.scss
@@ -4,6 +4,11 @@
 //   }
 // }
 
+body {
+	background-image: url("/static/img/express/xinyuxin.jpg");
+	background-size: cover;
+}
+
 nav {
 	.nav-wrapper {
 		margin-left: 20px;
