--- a/static/scss/index.scss
+++ b/static/scss/index.scss
@@ -7,6 +7,11 @@
 	height: 400px;
 }
 
+.index-container {
+	margin-left: 20px;
+	margin-right: 20px;
+}
+
 .section {
 	padding-top: 0.5rem;
 	padding-bottom: 0.5rem;
