--- a/static/scss/index.scss
+++ b/static/scss/index.scss
@@ -3,9 +3,9 @@
 
 
 body {
-	background-image: url("/static/img/express/xinyuxin.jpg");
-	background-size: cover;
-	background-repeat: no-repeat;
+	// background-image: url("/static/img/express/xinyuxin.jpg");
+	// background-size: cover;
+	// background-repeat: no-repeat;
 }
 
 .header {
